# GoProject

./: CMakeLists.txt  main.cpp
DrBombeExplore/: benchmarksolutions.cpp  benchmarksolutions.h  sgfgamesummary.cpp  sgfgamesummary.h
core/: global.cpp
dataio/: sgf.cpp  sgf.h
game/: board.cpp
game/backup_new/: board.cpp  board.h
tests/: testboardarea.cpp  testboardbasic.cpp  tests.h
